--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,10 +1,11 @@
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
+  background: rgba(27, 57, 86, 1);
 }
 
 .logo {
